--- a/public/css/agenda-virtual.css
+++ b/public/css/agenda-virtual.css
@@ -22,6 +22,22 @@
 	padding: 6px 12px;
 	border-radius: 5px 0 0 5px;
 }
+
+.typing{
+	display: none;
+	position: absolute;
+    top: calc(100% + -85px);
+    left: 0;
+    right: 0;
+    text-align: center;
+    font-size: 14px;
+    color: #9a9a9a;
+}
+
+.typing.show {
+  display: block;
+}
+
 .logo_box_chat{
 	filter: opacity(0.8);
 }
