--- a/public/css/smartchat.css
+++ b/public/css/smartchat.css
@@ -1,4 +1,4 @@
-#botao-agendavirtual {
+#botao-smartchat {
   position: fixed;
   bottom: 20px;
   right: 20px;
@@ -12,7 +12,7 @@
   z-index: 9999;
   transition: all 0.3s ease;
 }
-#botao-agendavirtual:hover {
+#botao-smartchat:hover {
   transform: scale(1.1);
   box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.3);
 }
@@ -50,14 +50,14 @@
   top: 92px;
 }
 
-.botao-agendavirtual svg {
+.botao-smartchat svg {
   width: 50px;
   height: 50px;
   margin-bottom: 5px;
   fill: #ffffff;
 }
 
-.botao-agendavirtual-inferior-esquerdo {
+.botao-smartchat-inferior-esquerdo {
 	left: 20px;
 }
 
@@ -65,7 +65,7 @@
 	left: 110px;
 }
 
-.botao-agendavirtual-superior-direito {
+.botao-smartchat-superior-direito {
 	top: 32px;
 }
 
@@ -73,7 +73,7 @@
 	top: 32px;
 }
 
-.botao-agendavirtual-superior-esquerdo {
+.botao-smartchat-superior-esquerdo {
 	left: 20px;
 	top: 32px;
 }
